Fixed a bug that can prevent per-domain PHP configurations from working when running PHP via CGI scripts.
Added the status of the Dovecot IMAP/POP3 server to the server status section of the right frame.
---- Changes since 3.43 ----
Added a script installer for the Textpattern Blog.
Added a script installer for Instiki, a Ruby on Rails Wiki.
Added a Module Config option to have MySQL users and permissions added to multiple servers, for use with replication or NDBCluster.
Updated Coppermine script installer to version 1.4.12, PhpWiki to 1.3.14, TextPattern to 4.0.5, osCommerce to 2.2rc1, SugarCRM to 4.5.1e, phpPgAdmin to 4.1.3, phpMyAdmin to 2.10.3, Joomla to 10.0.13, and Mantis to 1.0.8.
Webalizer statistics are now included in cPanel migrations.
Added a script installer for Mephisto, a Ruby on Rails Blog.
Ruby on Rails script directories are now protected from regular web access via a .htaccess file, as they are always accessed via a proxy.
Added an installer for Radiant, a Ruby on Rails content management system. Unfortunately it can only be reliably installed at the top level of a virtual server's web directory.
When a virtual server is deleted, all Mongrel server processes for Ruby on Rails applications associated with it are stopped, and prevented from starting at boot time.
Added checks for gcc and make to the Ruby on Rails script installers (needed to compile the MySQL driver), and make checking for commands by scripts more generic.
Added a restriction to the Edit Owner Limits page to prevent the creation of catchall email aliases.
Added fields to the autoreply section of the alias and user email forwarding pages to limit the date range on which replies are sent.
Added a Module Config option to delete aliases when email is disabled for a domain.
---- Changes since 3.44 ----
Updated phpBB script installer to allow a choice of the 3.0 and 2.0 versions.
Updated the Drupal script installer to versions 5.2 and 4.7.7.