@@ -66,3 +66,4 @@
 	SetHandler fcgid-script
 	</Location>
 
+ - new template-level default limits should be enabled
