@@ -1855,6 +1855,7 @@ limits_edit_spam=Can configure spam and virus delivery
 limits_edit_phpver=Can select PHP versions
 limits_edit_sharedips=Can select shared IPs
 limits_edit_catchall=Can create catchall aliases
+limits_edit_html=Can use web page editor
 limits_shell=Allowed login type
 limits_shell_nologin=No login
 limits_shell_ftp=FTP only
